Set the margins and white space issues in order

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -162,8 +162,8 @@ body {
   margin-top: -28px;
   margin-bottom: -10px;
   min-width: 1000px;
-  padding-top: 40px;
-  padding-bottom: 30px;
+  padding-top: 50px;
+  padding-bottom: 40px;
 }
 
 #row-1 {
